--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.deephost.screenrecorderapp"
+        applicationId "com.screen.recorder.threesixtydev"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -31,6 +32,4 @@ dependencies {
     implementation 'gun0912.ted:tedpermission:2.2.2'
     // design
     implementation 'com.android.support:design:28.0.0'
-    //Admob
-    implementation 'com.google.android.gms:play-services-ads:17.1.1'
 }
